manifests/workloads/deprecated/resume-dot-danmanners-dot-com/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: resume-danmanners-com-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`resume.danmanners.com`)
      kind: Rule
      services:
        - name: resume
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: resume-danmanners-com-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`resume.danmanners.com`)
      kind: Rule
      services:
        - name: resume
          port: 80
  tls:
    secretName: resume-danmanners-com
